# LangGraph-Multi-Agent-Travel-Planner

./: .gitignore  CHANGELOG.md  DEV_SPEC.md  README.md  lec3-prompting-principles.md  项目要求.md
backend/: pyproject.toml
backend/app/agents/: __init__.py
backend/app/agents/memory/: __init__.py  memory_manager.py  summary_memory.py
backend/app/api/: main.py
backend/app/config/: settings.py
backend/app/models/: __init__.py  schemas.py
backend/app/prompts/: __init__.py  trip_prompts.py
backend/app/providers/: __init__.py  registry.py
backend/app/rag/: __init__.py  retriever.py
backend/app/services/: __init__.py  amap_service.py  llm_service.py  unsplash_service.py
backend/config/: settings.yaml
backend/reports/perf/: F2_PERF_BASELINE.md  f2_baseline_20260313.json
backend/scripts/: perf_baseline.py
backend/tests/e2e/: test_user_journeys.py
backend/tests/integration/: test_attraction_rag_flow.py  test_baseline_migration.py  test_flight_provider_live_like.py  test_perf_baseline_script.py  test_planner_delta_routing.py  test_planner_memory_flow.py  test_planner_routing.py  test_rag_retrieval_service.py  test_wikivoyage_ingestion.py
backend/tests/unit/: test_attraction_agent.py  test_export_gateway.py  test_flight_agent.py  test_graph_bootstrap.py  test_hotel_agent.py  test_map_providers.py  test_memory_manager.py  test_photo_providers.py  test_planner_synthesis.py  test_prompt_regression.py  test_provider_registry.py  test_schema_contracts.py  test_skills_integration.py  test_visa_agent_trigger.py  test_visa_whitelist.py  test_weather_agent.py
(+53 files in other folders)
